      value part null has been fixed [by putting in the missing 'this.']
    o discovered a problem with literal labels whose values are arrays:
      hashing doesn't work. Added delegation so that an RDFDataType
      can provide a specialised hash function and arranged that the
      relevant XSD datatypes used it.

Database:
    o Added a based MS SQL Server 2000/MSDE 2000 driver.

Reasoners:
    o Fixed bug in the forward rule engine which prevented firing of axiomatic
      rules with non-empty bodies (i.e. no pattern match but calls to builtins).

Jar changes:
    o stax-1.1.1-dev.jar ==> stax-1.1.2-dev.jar

==== Jena 2.3

ARQ - SPARQL for Jena
    o ARQ added to Jena
      See doc/ARQ/index.html for details

JAR changes

    jena.jar has been split into jena.jar and jenatest.jar (the test packages).

    Replaced and upgraded with name changes:
      antlr.jar  =>  antlr-2.7.5.jar
      jakarta-oro-2.0.5.jar  =>  jakarta-oro-2.0.8.jar
      log4j-1.2.7.jar  =>  log4j-1.2.12.jar
      icu4j.jar  =>  icu4j_3_4.jar

    Xerces jars updated to Xerces 2.7.1

    New Jarfiles:
      arq.jar
      jenatest.jar
      stax-1.1.1-dev.jar
      stax-api-1.0.jar

Constraint rewriter
    o the .graph.query.Rewrite class recognises certain RDQL regex
      idioms and rewrites them. The rewritten expressions contained
      errors: (a) the case-insensitive classes stored the lowercased
      version fo the test string, which broken the RDB generated code;
      (b) against all his principles, kers had used toString() on
      the results of expression evaluation, which broke the comparison
      on typed or languaged literals. These Have Been Fixed.

PrefixMappings
    o new boolean method samePrefixMappingAs(PrefixMapping) compares mappings
      for equality but has opportunity to avoid creating intermediate
      maps.

    o NOTE: cannot overload .equals() because Model::equals() is already
      defined. Making Model implement PrefixMapping may have been a